# FEHU-SYSTEM

./: .gitignore.txt  CMakeLists.txt  addfinalschedule.cpp  addfinalschedule.h  addfinalschedule.ui  addschdule.cpp  addschdule.h  addschdule.ui  admin.cpp  admin.h  admin.ui  adminfees.cpp  adminfees.h  adminfees.ui  admingrades.cpp  admingrades.h  admingrades.ui  adminsupport.cpp  adminsupport.h  adminsupport.ui  changeadmin.cpp  changeadmin.h  changeadmin.ui  changepassword.cpp  changepassword.h  changepassword.ui  datamanger.cpp  datamanger.h  dialog.cpp  dialog.h  dialog.ui  edit.cpp  edit.h  edit.ui  einfo.cpp  einfo.h  einfo.ui  fees.cpp  fees.h  fees.ui  (+29 more)
